--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
     "react-native-elements": "^0.18.4",
     "react-native-nav": "^2.0.2",
+    "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   }
